fix: add wrap and adjusted background to work on different viewport sizes

--- a/index.css
+++ b/index.css
@@ -4,13 +4,15 @@
 
 html {
 	padding: 0;
+	background-image: url(images/cybercity.jpg);
+	background-color: #181818;
 }
 
 body {
-	background-color: #181818;
 	font-family: "Play", sans-serif;
 	margin: 0;
 	padding: 0;
+	background-color: #181818;
 }
 
 body::-webkit-scrollbar {
