--- a/projects.css
+++ b/projects.css
@@ -22,6 +22,7 @@
 	margin: 15px;
 	padding: 15px;
 	gap: 140px;
+	flex-wrap: wrap;
 }
 
 .collection img {
